<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoreFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/moretitleView"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:text="@string/more"
            android:textSize="45sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/editprofileBtn"
            android:layout_width="324dp"
            android:layout_height="39dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_gravity"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/edit_your_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moretitleView" />

        <Button
            android:id="@+id/changepasswordBtn"
            android:layout_width="324dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gravity"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editprofileBtn" />

        <Button
            android:id="@+id/managestylistBtn"
            android:layout_width="324dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gravity"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/manage_stylists"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editbusinessprofileBtn" />


        <Button
            android:id="@+id/editbusinessprofileBtn"
            android:layout_width="324dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gravity"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/edit_business_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changepasswordBtn" />


        <Button
            android:id="@+id/totalapptBtn"
            android:layout_width="324dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gravity"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:text="@string/total_appointments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/managestylistBtn" />

        <TextView
            android:id="@+id/appversionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/v1_0_0_alpha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalapptBtn" />

        <Button
            android:id="@+id/signoutBtn"
            android:layout_width="184dp"
            android:layout_height="43dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gravity"
            android:text="@string/signout"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appversionBtn"
            app:layout_constraintVertical_bias="0.123" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>