<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="287dp"
        android:layout_height="106dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="@color/colorMenuBar"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servicenameView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:text="@string/hair_cutting"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                app:layout_constraintBottom_toTopOf="@+id/servicedescView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/servicedurationView"
                android:layout_width="90dp"
                android:layout_height="30sp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_empty"
                android:gravity="center"
                android:text="@string/_00_30"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/servicenameView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/servicecostView"
                android:layout_width="90dp"
                android:layout_height="30sp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_empty"
                android:gravity="center"
                android:text="@string/_125"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/servicenameView"
                app:layout_constraintStart_toEndOf="@+id/servicedurationView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/servicedescView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:text="@string/this_is_the_normal_hair_cut"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/editserviceBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_empty"
                android:contentDescription="@string/editservice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit_black_24dp" />

            <ImageButton
                android:id="@+id/deleteserviceBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_empty"
                android:contentDescription="@string/deleteservice"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editserviceBtn"
                app:layout_constraintVertical_bias="0.076"
                app:srcCompat="@drawable/ic_delete_forever_black_24dp" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>